syntax = "proto3";

package notification;

service NotificationService {
    rpc createApplicationNotification(ApplicationNotificationArgs) returns (NotificationComplete) {}
    rpc createProfileNotification(NotificationCreateOneArgs) returns (NotificationComplete) {}
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message ApplicationNotificationArgs {
    string message = 1;
    string application_id = 2;
    string url = 3;
}

message NotificationCreateOneArgs {
    string message = 1;
    string user_id = 2;
    string url = 3;
}

message NotificationComplete {
    bool success = 1;
    string message = 2;
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
        SERVICE_UNKNOWN = 3;
    }
    ServingStatus status = 1;
}



